--- a/WebApplicationAngular/src/app/app.component.html
+++ b/WebApplicationAngular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Application says what?</h1>
+<h1>Web Application Angular with API in .NET</h1>
 <ul>
   <li *ngFor="let value of apiValues">{{value}}</li>
 </ul>
